完善脚本