@@ -1,13 +1,22 @@
 #!/bin/sh
+JAVA_VERSION=`java -fullversion 2>&1 | awk -F[\"\.] '{print $2$3$4}' |awk -F"_" '{print $1}'`
+if [ $JAVA_VERSION -lt 180 ]; then
+	echo "Error: Java version should >= 1.8.0 "
+    exit 1
+fi
+
 # gradle build -x test
 
-JAVA_OPTS="-Djava.net.preferIPv4Stack=true -server -Xms1g -Xmx1g -XX:PermSize=128m"
+cd `dirname $0`
+DIR=`pwd`
+
+JAVA_OPTS="-Djava.net.preferIPv4Stack=true -server -Xms1g -Xmx1g -XX:MetaspaceSize=128m"
 
 JAVA_DEBUG_OPTS=""
 if [ "$1" = "debug" ]; then
-    JAVA_DEBUG_OPTS=" -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n "
+    JAVA_DEBUG_OPTS=" -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n "
 fi
 
-CLIENT_NAME='net.jkcode.jkbenchmark.rpc.jkrpc.BenchmarkClient'
+CLIENT_CLASS='net.jkcode.jkbenchmark.rpc.jkrpc.BenchmarkClient'
 
-java $JAVA_OPTS -cp conf:libs/* net.jkcode.jkbenchmark.BenchmarkApp $CLIENT_NAME
+java $JAVA_OPTS $JAVA_DEBUG_OPTS -cp $DIR/conf:$DIR/libs/* net.jkcode.jkbenchmark.BenchmarkApp $CLIENT_CLASS
